# lattice

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md
.claude/: CLAUDE.md
.claude/agents/engineering/: devops.md  em.md  sde-core.md  sde-frontend.md  sde-io.md  sde-mcp.md  tech-lead.md
.claude/agents/product/: pm.md  product-designer.md  ux-researcher.md
.claude/agents/quality/: qa-engineer.md  qa-lead.md  security.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/bundle/: SKILL.md
.claude/skills/formula-check/: SKILL.md
.claude/skills/lattice/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/pr-check/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/sync-check/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/test-mcp/: SKILL.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/lattice-analysis/: Cargo.toml
crates/lattice-analysis/src/: correlation.rs  lib.rs  portfolio.rs  statistics.rs  trend.rs
crates/lattice-charts/: Cargo.toml
crates/lattice-charts/src/: chart.rs  lib.rs  render.rs  svg.rs
crates/lattice-charts/src/types/: area.rs  bar.rs  bubble.rs  candlestick.rs  combo.rs  gauge.rs  histogram.rs  line.rs  mod.rs  pie.rs  radar.rs  scatter.rs  treemap.rs  waterfall.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/benches/: cell_ops_bench.rs  formula_bench.rs
crates/lattice-core/src/: autofill.rs  autosave.rs  cell.rs  clipboard.rs  conditional_format.rs  error.rs  filter.rs  filter_view.rs  find_replace.rs  format.rs  history.rs  lib.rs  named_function.rs  named_range.rs  pivot.rs  selection.rs  sheet.rs  sort.rs  sparkline.rs  validation.rs  workbook.rs
crates/lattice-core/src/formula/: dependency.rs  evaluator.rs  mod.rs  parser.rs  query.rs  query_exec.rs
crates/lattice-io/: Cargo.toml
crates/lattice-io/src/: atomic.rs  csv_io.rs  file_info.rs  format_detect.rs  json_export.rs  lib.rs  pdf_export.rs  recent_files.rs  tsv_io.rs  watcher.rs  xlsx_chart_parser.rs  xlsx_chart_reader.rs  xlsx_reader.rs  xlsx_writer.rs
crates/lattice-io/src/cloud/: dropbox.rs  google_drive.rs  icloud.rs  mod.rs
crates/lattice-mcp/: Cargo.toml
crates/lattice-mcp/src/: lib.rs  prompts.rs  resources.rs  schema.rs  server.rs
crates/lattice-mcp/src/tools/: analysis.rs  cell_ops.rs  chart_ops.rs  conditional_format_ops.rs  data_ops.rs  file_ops.rs  filter_view_ops.rs  find_replace_ops.rs  format_ops.rs  formula_ops.rs  mod.rs  named_function_ops.rs  named_range_ops.rs  sheet_ops.rs  sparkline_ops.rs  validation_ops.rs
crates/lattice-mcp/src/transport/: http.rs  mod.rs  stdio.rs
docs/: CHANGELOG.md  CLOUD_SYNC.md  GOOGLE_SHEETS_FEATURES.md  MCP_REFERENCES.md  PLAN.md  REFERENCES.md  RELEASE_CHECKLIST.md  REMAINING_FEATURES_SUMMARY.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/bridge/: tauri.ts  tauri_helpers.ts
frontend/src/components/: AboutDialog.tsx  AddSlicerDialog.tsx  ColumnStatsPanel.tsx  ConditionalFormatDialog.tsx  DataCleanupDialog.tsx  DataValidationDialog.tsx  FilterDropdown.tsx  FilterViewDropdown.tsx  FindBar.tsx  FormatCellsDialog.tsx  FormulaBar.tsx  Grid.tsx  KeyboardShortcutsDialog.tsx  NamedFunctionsDialog.tsx  NamedRangesDialog.tsx  PasteSpecialDialog.tsx  PivotDialog.tsx  PrintPreviewDialog.tsx  SheetTabs.tsx  SlicerWidget.tsx  SortDialog.tsx  StatusBar.tsx  TextToColumnsDialog.tsx  Toolbar.tsx  VersionHistoryDialog.tsx  WelcomeScreen.tsx
frontend/src/components/Charts/: ChartContainer.tsx  ChartDialog.tsx
frontend/src/components/Grid/: AutoComplete.tsx  FormulaAutoComplete.test.ts  FormulaAutoComplete.tsx  FormulaHint.test.ts  FormulaHint.tsx  VirtualGrid.tsx  autoComplete.test.ts  autoCompleteUtils.ts  constants.ts  fillUtils.test.ts  fillUtils.ts  formulaFunctions.ts  gridGeometry.test.ts  gridGeometry.ts
frontend/src/styles/: grid.css
frontend/tests/e2e/: wdio.conf.ts
frontend/tests/e2e/helpers/: app.ts
frontend/tests/e2e/specs/: autofill.spec.ts  cells.spec.ts  charts.spec.ts  dialogs.spec.ts  files.spec.ts  filter.spec.ts  formatting.spec.ts  formulas.spec.ts  launch.spec.ts  mcp.spec.ts  selection.spec.ts  sheets.spec.ts  shortcuts.spec.ts  statusbar.spec.ts
homebrew/: lattice.rb
scripts/: version-bump.sh
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  mcp_bridge.rs  socket_server.rs  state.rs
src-tauri/src/commands/: autosave.rs  cell.rs  chart.rs  cloud.rs  conditional_format.rs  data.rs  edit.rs  export.rs  file.rs  filter.rs  format.rs  mod.rs  sheet.rs  validation.rs  version.rs
tests/: Cargo.toml
tests/integration/: mcp_tests.rs  release_validation_tests.rs
