[workspace]
members = [
    "crates/lattice-core",
    "crates/lattice-io",
    "crates/lattice-mcp",
    "crates/lattice-charts",
    "crates/lattice-analysis",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Puneet Mahajan"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
indexmap = { version = "2", features = ["serde"] }
