[package]
name = "lattice-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
rand = "0.9"
regex = "1"
