[package]
name = "lattice-io"
version.workspace = true
edition.workspace = true

[dependencies]
lattice-core = { path = "../lattice-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
calamine = { version = "0.26", features = ["dates"] }
rust_xlsxwriter = "0.94"
csv = "1"
