[package]
name = "lattice-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
lattice-core = { path = "../lattice-core" }
lattice-io = { path = "../lattice-io" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
regex = "1"
