[package]
name = "lattice-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
lattice-core = { path = "../lattice-core" }
lattice-io = { path = "../lattice-io" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
regex = "1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"] }
http-body-util = "0.1"
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
